feat(удаление события + редизайн)
